--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -129,6 +130,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+spark-venv/
+.spark-venv/
 
 # Spyder project settings
 .spyderproject
